--- a/RestauranteWarley/Views/Shared/Error.cshtml
+++ b/RestauranteWarley/Views/Shared/Error.cshtml
@@ -7,7 +7,7 @@
 <body>
     <hgroup>
         <h1>Error.</h1>
-        <h2>An error occurred while processing your request.</h2>
+        <h2>Ocorreu um erro durante o processamento da sua solicitação.</h2>
     </hgroup>
 </body>
 </html>
