--- a/RestauranteWarley/Views/Shared/Error.cshtml
+++ b/RestauranteWarley/Views/Shared/Error.cshtml
@@ -6,7 +6,7 @@
 </head>
 <body>
     <hgroup>
-        <h1>Error.</h1>
+        <h1>Atenção!.</h1>
         <h2>Ocorreu um erro durante o processamento da sua solicitação.</h2>
     </hgroup>
 </body>
