--- a/RestauranteWarley/Views/Shared/Error.cshtml
+++ b/RestauranteWarley/Views/Shared/Error.cshtml
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Error</title>
+    <title>Titulo do erro.</title>
 </head>
 <body>
     <hgroup>
